# customer-satisfaction-mlops

./: pyproject.toml  run_pipeline.py  streamlit_app.py
.zen/: config.yaml
steps/: clean_data.py  evaluation.py  ingest_data.py  model_train.py
