[project]
name = "customer-satisfaction-mlops"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
dependencies = [
    "catboost",
    "joblib",
    "lightgbm",
    "optuna",
    "streamlit",
    "xgboost",
    "markupsafe",
    "zenml",
    "mlflow>=2.14.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
